<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".view.fragments.NewStudentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/new_student_title"
                android:textAlignment="center"
                android:textColor="@color/primaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCuenta"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:hint="@string/new_student_account">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/primaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNombre"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:hint="@string/new_student_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/primaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEdad"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/new_student_age">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:lines="1"
                    android:textColor="@color/primaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvSubjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_student_subjects"
                android:textStyle="bold"
                android:textColor="@color/primaryDark"
                android:textSize="14sp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkbox1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_subject1" />

                        <CheckBox
                            android:id="@+id/checkbox2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_subject2" />

                        <CheckBox
                            android:id="@+id/checkbox3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_subject3" />

                        <CheckBox
                            android:id="@+id/checkbox4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_subject4" />

                        <CheckBox
                            android:id="@+id/checkbox5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_subject5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </ScrollView>

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkbox6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_subject6" />

                        <CheckBox
                            android:id="@+id/checkbox7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_subject7" />

                        <CheckBox
                            android:id="@+id/checkbox8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_subject8" />

                        <CheckBox
                            android:id="@+id/checkbox9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_subject9" />

                        <CheckBox
                            android:id="@+id/checkbox10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_subject10" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </ScrollView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/new_student_add" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>